# ASSIGNMENT-2.0

./: CMakeLists.txt  Display element from an array taken from user.c  numericals.c  pattern.c  problem 1.c  problem 2.c
