cmake_minimum_required(VERSION 3.26)
project(ASSIGNMENT_2_0 C)

set(CMAKE_C_STANDARD 17)

add_executable(ASSIGNMENT_2_0
        "problem 1.c"
        "problem 2.c"
        pattern.c
        "Display element from an array taken from user.c"
        "Display element from an array taken from user.c"
        numericals.c
        numericals.c)
